--- a/index.html
+++ b/index.html
@@ -1,166 +1,296 @@
 <!DOCTYPE html>
-<html lang="es">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Para Daniela, la dueña de mi corazón</title>
-    <style>
-      body {
-        margin: 0;
-        padding: 0;
-        background: #fddde6;
-        font-family: "Arial", sans-serif;
-        overflow: hidden;
-      }
+<html lang="en">
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Para Dani ❤️</title>
+        <link rel="stylesheet" href="style.css">
+        <style>
+            body {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    margin: 0;
+    background: url('https://img.freepik.com/vector-gratis/tema-san-valentin-corazones-cielo-rosa_1308-38030.jpg?semt=ais_hybrid&w=740') no-repeat center center;
+    background-size: cover;
+    background-attachment: fixed;
+    font-family: 'Arial', sans-serif;
+    text-align: center;
+    overflow: hidden;
+    position: relative;
+}
 
-      .container {
-        position: relative;
-        width: 100vw;
-        height: 100vh;
-      }
+@keyframes gradientAnimation {
+    0% { background-position: 0% 50%; }
+    50% { background-position: 100% 50%; }
+    100% { background-position: 0% 50%; }
+}
 
-      #treeCanvas {
-        position: absolute;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
-      }
+.message {
+    background: rgba(255, 255, 255, 0.8);
+    padding: 25px;
+    border-radius: 15px;
+    box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.2);
+    font-size: 28px;
+    color: #d63384;
+    font-weight: bold;
+    margin-bottom: 25px;
+    transition: transform 0.3s ease;
+    animation: bounce 1s infinite;
+}
 
-      .message {
-        position: absolute;
-        top: 10%;
-        left: 10%;
-        width: 80%;
-        color: #7a3b69;
-        font-size: 1.5em;
-        text-shadow: 1px 1px 2px #fff;
-        background-color: rgba(255, 255, 255, 0.4);
-        padding: 10px;
-        border-radius: 15px;
-      }
+@keyframes bounce {
+    0%, 100% { transform: translateY(0); }
+    50% { transform: translateY(-15px); }
+}
 
-      .timer {
-        margin-top: 20px;
-        font-size: 1em;
-        color: #333;
-      }
-    </style>
-  </head>
-  <body>
-    <div class="container">
-      <canvas id="treeCanvas"></canvas>
-      <div class="message">
-        <p id="typewriter"></p>
-        <p class="timer" id="timer"></p>
-      </div>
-    </div>
+.message:hover {
+    transform: scale(1.1);
+}
 
-    <script>
-      const text = `Para el amor de mi vida:\n
-          Si te digo que te amo es porque realmente te amo,\n
-          Si te digo que te quiero es porque no puedo vivir sin ti.\n
-          Eres mi complemento perfecto, mi media naranja, mi otra mitad, mi amor\n
-          Eres la persona que siempre he buscado, el amor que siempre he anhelado.\n
-          — TE AMO MUCHO`;
+.hearts {
+    position: absolute;
+    top: 20%;
+    left: 10%;
+    z-index: -1;
+    font-size: 50px;
+    color: #ff99b6;
+    animation: floatHearts 5s ease-in-out infinite;
+}
 
-      let index = 0;
-      const typewriterElement = document.getElementById("typewriter");
+@keyframes floatHearts {
+    0% { transform: translateY(0) scale(1); opacity: 1; }
+    50% { transform: translateY(-150px) scale(1.5); opacity: 0.5; }
+    100% { transform: translateY(0) scale(1); opacity: 1; }
+}
 
-      function typeWriter() {
-        if (index < text.length) {
-          typewriterElement.innerHTML +=
-            text.charAt(index) === "\n" ? "<br>" : text.charAt(index);
-          index++;
-          setTimeout(typeWriter, 40);
-        }
-      }
-      typeWriter();
+.hearts:nth-child(2) { left: 25%; animation-duration: 6s; }
+.hearts:nth-child(3) { left: 40%; animation-duration: 7s; }
+.hearts:nth-child(4) { left: 60%; animation-duration: 8s; }
+.hearts:nth-child(5) { left: 75%; animation-duration: 9s; }
 
-      // Timer
-      const startDate = new Date();
-      startDate.setFullYear(startDate.getFullYear() - 1);
+.text-container {
+    position: absolute;
+    top: 0; left: 0; right: 0; bottom: 0;
+}
 
-      function updateTimer() {
-        const now = new Date();
-        const diff = now - startDate;
-        const days = Math.floor(diff / (1000 * 60 * 60 * 24));
-        const hours = Math.floor((diff / (1000 * 60 * 60)) % 24);
-        const minutes = Math.floor((diff / (1000 * 60)) % 60);
-        const seconds = Math.floor((diff / 1000) % 60);
-      }
-      setInterval(updateTimer, 1000);
-      updateTimer();
+.charming-text {
+    position: absolute;
+    font-size: 18px;
+    font-family: 'Cursive', sans-serif;
+    color: #d63384;
+    animation: fadeInText 6s ease-in-out infinite;
+    z-index: 1;
+    padding: 10px 20px;
+    border-radius: 25px;
+    background-color: rgba(255, 255, 255, 0.7);
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    max-width: 80vw;
+    word-wrap: break-word;
+}
 
-      // Canvas para corazones cayendo
-      const canvas = document.getElementById("treeCanvas");
-      const ctx = canvas.getContext("2d");
+.charming-text:nth-child(1) { top: 15%; left: 5%; text-align: left; animation-duration: 6s; }
+.charming-text:nth-child(2) { top: 25%; left: 5%; text-align: left; animation-duration: 7s; }
+.charming-text:nth-child(3) { top: 35%; left: 5%; text-align: left; animation-duration: 8s; }
+.charming-text:nth-child(4) { top: 15%; right: 5%; text-align: right; animation-duration: 6s; }
+.charming-text:nth-child(5) { top: 25%; right: 5%; text-align: right; animation-duration: 7s; }
+.charming-text:nth-child(6) { top: 35%; right: 5%; text-align: right; animation-duration: 8s; }
 
-      function resizeCanvas() {
-        canvas.width = window.innerWidth;
-        canvas.height = window.innerHeight;
-      }
-      resizeCanvas();
-      window.addEventListener("resize", resizeCanvas);
+@keyframes fadeInText {
+    0% { opacity: 0; }
+    50% { opacity: 0.5; transform: scale(1.2); }
+    100% { opacity: 1; transform: scale(1); }
+}
 
-      // Dibujar un corazón
-      function drawHeart(x, y, size, color) {
-        ctx.save();
-        ctx.beginPath();
-        ctx.translate(x, y);
-        ctx.scale(size, size);
-        ctx.moveTo(0, 0);
-        ctx.bezierCurveTo(0, -3, -5, -3, -5, 0);
-        ctx.bezierCurveTo(-5, 3, 0, 5, 0, 8);
-        ctx.bezierCurveTo(0, 5, 5, 3, 5, 0);
-        ctx.bezierCurveTo(5, -3, 0, -3, 0, 0);
-        ctx.closePath();
-        ctx.fillStyle = color;
-        ctx.fill();
-        ctx.restore();
-      }
+.flowers {
+    position: absolute;
+    bottom: 10px;
+    animation: flowerAnimation 5s ease-in-out infinite;
+    font-size: 30px;
+}
 
-      let fallingHearts = [];
+@keyframes flowerAnimation {
+    0% { transform: translateY(0); opacity: 0; }
+    50% { transform: translateY(-50px); opacity: 1; }
+    100% { transform: translateY(0); opacity: 0; }
+}
 
-      // Generar muchos corazones cayendo
-      function generateFallingHearts() {
-        fallingHearts = [];
-        for (let i = 0; i < 100; i++) {
-          // ahora más corazones
-          fallingHearts.push({
-            x: Math.random() * canvas.width,
-            y: Math.random() * canvas.height,
-            size: Math.random() * 1.2 + 0.8, // corazones más grandes
-            speedY: Math.random() * 1.5 + 0.5,
-            speedX: (Math.random() - 0.5) * 0.5,
-            color: `hsl(${Math.random() * 360}, 70%, 70%)`,
-          });
-        }
-      }
-      generateFallingHearts();
+.flowers:nth-child(1) { left: 10%; animation-duration: 6s; }
+.flowers:nth-child(2) { left: 30%; animation-duration: 7s; }
+.flowers:nth-child(3) { left: 50%; animation-duration: 8s; }
+.flowers:nth-child(4) { left: 70%; animation-duration: 9s; }
+.flowers:nth-child(5) { left: 90%; animation-duration: 10s; }
 
-      // Animación
-      function animate() {
-        ctx.clearRect(0, 0, canvas.width, canvas.height);
+.bubbles {
+    position: absolute;
+    bottom: 10px;
+    font-size: 25px;
+    color: #ff99b6;
+    animation: bubbleAnimation 7s ease-in-out infinite;
+}
 
-        // Dibujar y mover corazones cayendo
-        for (let heart of fallingHearts) {
-          drawHeart(heart.x, heart.y, heart.size, heart.color);
-          heart.y += heart.speedY;
-          heart.x += heart.speedX;
-          if (heart.y > canvas.height) {
-            heart.y = -10;
-            heart.x = Math.random() * canvas.width;
-          }
-          if (heart.x > canvas.width || heart.x < 0) {
-            heart.x = Math.random() * canvas.width;
-            heart.y = -10;
-          }
-        }
+@keyframes bubbleAnimation {
+    0% { transform: translateY(0) scale(1); opacity: 0.8; }
+    50% { transform: translateY(-100px) scale(1.3); opacity: 0.4; }
+    100% { transform: translateY(0) scale(1); opacity: 0.8; }
+}
 
-        requestAnimationFrame(animate);
-      }
-      animate();
-    </script>
-  </body>
-</html>
+.bubbles:nth-child(1) { left: 10%; animation-duration: 8s; }
+.bubbles:nth-child(2) { left: 30%; animation-duration: 9s; }
+.bubbles:nth-child(3) { left: 50%; animation-duration: 10s; }
+.bubbles:nth-child(4) { left: 70%; animation-duration: 11s; }
+.bubbles:nth-child(5) { left: 90%; animation-duration: 12s; }
+
+#bubbles-text {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    pointer-events: none;
+    overflow: hidden;
+    z-index: 1;
+}
+
+.text-bubble {
+    position: absolute;
+    font-size: 18px;
+    font-family: 'Cursive', sans-serif;
+    color: #d63384;
+    background-color: rgba(255, 255, 255, 0.7);
+    padding: 10px 20px;
+    border-radius: 25px;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    animation: floatText 8s ease-in-out forwards;
+    white-space: nowrap;
+}
+
+@keyframes floatText {
+    0% { opacity: 0; transform: scale(0.5) translateY(0px); }
+    50% { opacity: 1; transform: scale(1.2) translateY(-50px); }
+    100% { opacity: 0; transform: scale(1) translateY(-100px); }
+}
+
+@media (max-width: 768px) {
+    body {
+        background-size: 100% 100%;
+        background-position: center top;
+    }
+
+    .message { font-size: 24px; padding: 20px; }
+    .charming-text { font-size: 16px; padding: 8px 16px; }
+    .flowers { font-size: 25px; }
+    .bubbles { font-size: 20px; }
+}
+
+@media (max-width: 768px) {
+    body {
+        background-position: center top;
+        background-size: cover;
+    }
+}
+
+
+        </style>
+    </head>
+    <body>
+        <div class="message">Te amo Dani ❤️</div>
+        <div id="bubbles-text"></div>
+        <script src="script.js"></script>
+        <script>
+            // Lista de mensajes románticos que aparecerán en burbujas
+const messages = [
+  "Te amo muchísimo ❤️",
+  "Gracias por estar en mi vida 🌟",
+  "Eres mi persona favorita 💕",
+  "Juntos por siempre 🥰",
+  "Tú y yo, para siempre 💖",
+  "Tu sonrisa me ilumina 💫",
+  "Eres lo mejor que me ha pasado 😍",
+  "Cada momento contigo es mágico ✨",
+  "Siempre pienso en ti 💭",
+  "Mi corazón es tuyo 💘"
+];
+
+// Función que crea una burbuja de texto con un mensaje aleatorio
+function createTextBubble() {
+  // Creamos un nuevo elemento <div>
+  const bubble = document.createElement("div");
+
+  // Le asignamos la clase CSS "text-bubble" (debes definirla en tu CSS)
+  bubble.className = "text-bubble";
+
+  // Seleccionamos un mensaje aleatorio del arreglo
+  bubble.innerText = messages[Math.floor(Math.random() * messages.length)];
+
+  // Calculamos una posición aleatoria dentro de la pantalla (entre 10% y 90%)
+  const left = Math.random() * 80 + 10;
+  const top = Math.random() * 80 + 10;
+
+  // Establecemos la posición absoluta y aplicamos las coordenadas calculadas
+  bubble.style.position = "absolute";
+  bubble.style.left = left + "vw"; // vw = porcentaje del ancho de la ventana
+  bubble.style.top = top + "vh";   // vh = porcentaje del alto de la ventana
+
+  // Buscamos el contenedor con ID "bubbles-text" y añadimos la burbuja
+  const container = document.getElementById("bubbles-text");
+  container.appendChild(bubble);
+
+  // Esperamos un momento (10ms) para asegurarnos de que se renderizó
+  setTimeout(() => {
+    const rect = bubble.getBoundingClientRect(); // Obtenemos las coordenadas reales del div
+
+    // Si la burbuja se sale por la derecha, la ajustamos hacia la izquierda
+    if (rect.right > window.innerWidth) {
+      const newLeft = window.innerWidth - rect.width - 10;
+      bubble.style.left = `${newLeft}px`;
+    }
+
+    // Si la burbuja se sale por la parte inferior, la subimos
+    if (rect.bottom > window.innerHeight) {
+      const newTop = window.innerHeight - rect.height - 10;
+      bubble.style.top = `${newTop}px`;
+    }
+
+    // Si se va muy a la izquierda, la traemos hacia adentro
+    if (rect.left < 0) {
+      bubble.style.left = "10px";
+    }
+
+    // Si se va muy arriba, la bajamos un poco
+    if (rect.top < 0) {
+      bubble.style.top = "10px";
+    }
+  }, 10);
+
+  // Eliminamos la burbuja automáticamente después de 8 segundos
+  setTimeout(() => {
+    bubble.remove();
+  }, 8000);
+}
+
+// Llamamos a la función createTextBubble cada 500 milisegundos (0.5 segundos)
+setInterval(createTextBubble, 500);
+
+        </script>
+    </body>
+
+     <!-- 
+
+Contáctame:
+
+    * Invitame un café
+ https://buymeacoffee.com/alexx.dev
+
+    * Portafolio Web
+ https://alexxdev.vercel.app
+
+    * Sigueme en tiktok
+ https://www.tiktok.com/@alexx.dev?is_from_webapp=1&sender_device=pc 
+ 
+    *Canal de WhatsApp
+ https://whatsapp.com/channel/0029VazQEXq90x2vIdNkrH1p
+
+-->
+ 
+    </html>
